--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     //
     let itemId = '0ba47e28d394431c8fa50817f49c3b4a';
-    let clientId = '8LE0ok09WuRWTo6J
+    let clientId = '8LE0ok09WuRWTo6J';
 
     //empty data variable to collect parsed results
     let data = [];
